Remove scrollbar button shadow (fix regression 2234d80)

--- a/Zen-nigra/gtk-3.0/gtk-widgets.css
+++ b/Zen-nigra/gtk-3.0/gtk-widgets.css
@@ -489,6 +489,7 @@ GtkScale.vertical.trough {
 
 .scrollbar.button, .scrollbar.trough {
     border-style: none;
+    box-shadow: none;
     background-color: @bg_color;
     background-image: none;
 }
@@ -811,6 +812,7 @@ column-header .button:hover, column-header .button:hover:focus {
     background-color: transparent;
     background-image: none;
     border-style: none;
+    box-shadow: none;
 }
 
 .menu *:hover, .menu *:active:hover, .menu *:selected {
